--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ global:
 *.user
 *.ncb
 *.suo
-msuIM\Debug\*
-msuIM\Release\*
+NotifierService/Debug*
+NotifierService/Release*
+NotifierService/GeneratedFiles*
+NotifierService/Makefile*
